--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 # Do not remove this line, otherwise mod_rewrite rules will stop working
 RewriteBase /
 RewriteEngine On
-RewriteRule ^(\d+)$ get.php?asset=$1 [NC]
+RewriteRule ^(\d+)$ get.php?asset=$1 [N,QSA]
